fixed some spacing issues, removed picture

--- a/style/home_style.css
+++ b/style/home_style.css
@@ -251,11 +251,11 @@ body {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	position: relative;
+	position: absolute;
 	top: 0;
 	width: 100%;  
 
-	overflow: hidden;
+	overflow: visible;
 	opacity: 1;
 	z-index:3;
 
